--- a/jucsemylib/www/css/signUp.css
+++ b/jucsemylib/www/css/signUp.css
@@ -1,7 +1,11 @@
 /*#B79486   #9965F4    #EFE5FD*/
 * {box-sizing: border-box}
-.extra-info{
-  color:#B79486;
+.extra-info{  color:#B79486;}
+.box{margin-left:30%;}
+.header{
+	background:#9965F4;
+	color:white;
+	 padding: 5px;
 }
 
 /* input fields */
@@ -21,7 +25,9 @@ input[type=text]:focus, input[type=password]:focus {
 
 hr {
   border: 1px solid #9965F4;
+  margin-left:-4%;
   margin-bottom: 25px;
+  width:77%;
 }
 
 /* Sign up button */
