--- a/jucsemylib/www/css/signUp.css
+++ b/jucsemylib/www/css/signUp.css
@@ -1,7 +1,7 @@
 /*#263238*/
 /* {box-sizing: border-box}*/
 .extra-info{  color:grey;}
-.box{margin-left:5%;}
+.box{margin-left:2%;}
 .header{
 	width: 95%;
 	background: #263238;
@@ -20,6 +20,7 @@
   display: inline-block;
   border: none;
   background: #f1f1f1;
+  border-radius: 5px;
 }
 
 input[type=text]:focus, input[type=password]:focus {
@@ -29,7 +30,7 @@ input[type=text]:focus, input[type=password]:focus {
 
 hr {
   border: 1px solid #263238;
-  margin-left:-4%;
+  margin-left:-2%;
   margin-bottom: 25px;
   width:100%;
 }
@@ -44,6 +45,7 @@ button {
   cursor: pointer;
   width: 95%;
   opacity: 0.9;
+  border-radius: 5px;
 }
 
 button:hover {
