--- a/jucsemylib/www/css/home.css
+++ b/jucsemylib/www/css/home.css
@@ -6,7 +6,7 @@ body
 #sidenav
 {
     background-color: rgb(20,20,20);
-    color: rgb(200,200,200);;
+    color: rgb(200,200,200);
     width: 0;
     height: 100vh;
     position: fixed;
