--- a/jucsemylib/www/css/forgetpasword.css
+++ b/jucsemylib/www/css/forgetpasword.css
@@ -1,26 +1,27 @@
 @import url("theme.css");
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 body{
   font-family: Arial, Helvetica, 
   sans-serif;
   background-color: silver;
 }
 .header{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0; 
-  width: 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	padding: 0; 
+	/*width:*/ 
 }
-button {
-  background-color: var(--secondary);
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  border-radius: 5px;
+button{
+	background-color: var(--secondary);
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	border-radius: 5px;
 }
 button .
 
@@ -29,11 +30,33 @@ form {
 	background-color: #DCDCDC;
 }
 input[type="email"]{
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  border-radius: 5px;
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+	border-radius: 5px;
+}
+#tempButton a{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.5em;
+	margin: 0px 10px 0px 10px;
+	padding: 0px 8px 0px 8px;
+	color: black;
+	text-decoration: none;
+	background-color: var(--primary);
+	border: 2px solid;
+	border-color: white;
+	border-radius: 20px;
+}
+
+/* Give the user an affordance that each link is clickable. */
+#tempSignupButton a,#tempLoginButton a:hover {
+	border-color: black;
+}
+
+/* Style the active page link. */
+#tempButton a.active{
+	border-color: gray;
 }
