--- a/jucsemylib/www/css/theme.css
+++ b/jucsemylib/www/css/theme.css
@@ -4,6 +4,7 @@
     --primary-dark: #01579B;
     --secondary: #FFCC80;
     --dark: #212121;
+	--fuck: rgb(200,200,200);
     --light: #FAFAFA;
 	--faint: grey;
 }
