--- a/jucsemylib/www/css/homescreen.css
+++ b/jucsemylib/www/css/homescreen.css
@@ -3,11 +3,12 @@ body{
 	background: var(--dark);
 }
 img{
+	display: block;
 	border-radius: 50%;
-	margin-left: 25%;
-	width:100px;
-	height:100px;
-	border: 2px dashed var(--light);
+	margin-left: auto;
+	margin-right: auto;
+	width:150px;
+	height:150px;
 	padding: 30px;
 }
 
