--- a/jucsemylib/www/css/index.css
+++ b/jucsemylib/www/css/index.css
@@ -1,6 +1,9 @@
 body
 {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--dark);
+    color: var(--light);
 }
 
 #sidenav
