--- a/jucsemylib/www/css/forgetpasword.css
+++ b/jucsemylib/www/css/forgetpasword.css
@@ -34,7 +34,7 @@ form {
 	border: 3px solid #f1f1f1;
 	background-color: var(--dark);
 }
-input[type="email"]{
+input{
 	width: 100%;
 	padding: 12px 20px;
 	margin: 8px 0;
@@ -56,7 +56,7 @@ input[type="email"]{
 	border-radius: 20px;
 }
 p{
-	color: var(--primary-dark);
+	color: var(--fuck);
 }
 
 /* Give the user an affordance that each link is clickable. */
