--- a/jucsemylib/www/css/index.css
+++ b/jucsemylib/www/css/index.css
@@ -33,7 +33,8 @@ body
 #topBar
 {
     box-sizing: border-box;
-    padding: 3vw;
+	padding: 5px;
+	padding-left: 15px;
     margin: 0;
     width: 100vw;
     height: 60px;
