--- a/jucsemylib/www/css/index.css
+++ b/jucsemylib/www/css/index.css
@@ -1,6 +1,9 @@
 body
 {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--dark);
+    color: var(--light);
 }
 
 #sidenav
@@ -30,7 +33,8 @@ body
 #topBar
 {
     box-sizing: border-box;
-    padding: 3vw;
+	padding: 5px;
+	padding-left: 15px;
     margin: 0;
     width: 100vw;
     height: 60px;
