--- a/jucsemylib/www/css/forgetpasword.css
+++ b/jucsemylib/www/css/forgetpasword.css
@@ -1,5 +1,4 @@
-@import url("theme.css");
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url("theme.css");s
 body{
   font-family: Arial, Helvetica, 
   sans-serif;
@@ -31,10 +30,10 @@ button{
 button .
 
 form {
-	border: 3px solid #f1f1f1;
 	background-color: var(--dark);
 }
-input{
+input[type=email],
+input[type=text]{
 	width: 100%;
 	padding: 12px 20px;
 	margin: 8px 0;
