--- a/admin_side/css/homescreen.css
+++ b/admin_side/css/homescreen.css
@@ -1,44 +1,44 @@
 @import url("theme.css");
-
-img{
-	display: block;
-	border-radius: 50%;
-	margin-left: auto;
-	margin-right: auto;
-	width:150px;
-	height:150px;
-	padding: 30px;
+img {
+    display: block;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+    padding: 30px;
 }
 
-.info{
-	text-align: center;
-	font-family: 'Arvo', serif;
-	color: var(--light);
+.info {
+    text-align: center;
+    font-family: 'Arvo', serif;
+    color: var(--light);
 }
 
 hr {
-  border: 1px solid var(--light);
+    border: 1px solid var(--light);
 }
 
-.book_info{
-	color:var(--secondary);
-	text-align: center;
+.book_info {
+    color: var(--secondary);
+    text-align: center;
 }
 
-.extra_info{
-	color:var(--faint);
-	text-align: center;
+.extra_info {
+    color: var(--faint);
+    text-align: center;
 }
 
-h2{display :inline;}
-
-.reminder{
-	background: var(--primary-dark);
-	color:var(--light);
-	padding: 20px;
-	text-align: center;
-	font-family: 'Roboto', sans-serif;
-	bottom:0;
-	cursor: pointer;
+h2 {
+    display: inline;
 }
 
+.reminder {
+    background: var(--primary-dark);
+    color: var(--light);
+    padding: 20px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    bottom: 0;
+    cursor: pointer;
+}
