--- a/admin_side/css/index.css
+++ b/admin_side/css/index.css
@@ -1,3 +1,4 @@
+@import url("theme.css");
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,13 +8,13 @@ body {
 }
 
 #sidenav {
-    background-color: rgb(20, 20, 20);
+    background-color: #263238;
     color: rgb(200, 200, 200);
     height: 100%;
     position: fixed;
     overflow-x: hidden;
     padding-top: 90px;
-    border-right: 2px solid var(--light);
+    border-right: 2px solid var(--faint);
     z-index: 1;
 }
 
