--- a/admin_side/css/index.css
+++ b/admin_side/css/index.css
@@ -38,7 +38,7 @@ body {
     margin: 0;
     width: 100vw;
     height: 60px;
-    overflow: auto;
+    overflow: hidden;
     background-color: #263238;
     color: rgb(200, 200, 200);
     display: flex;
