--- a/jucsemylib/www/css/forgetpasword.css
+++ b/jucsemylib/www/css/forgetpasword.css
@@ -1,9 +1,12 @@
 @import url("theme.css");
 
 h2 {
-    color: var(--light);
-    margin: 28px 0;
-    padding: 12px 20px;
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	padding: 0; 
+	color: var(--light);
 }
 form{
     background-color: var(--dark);
@@ -38,8 +41,11 @@ button:hover {
     opacity: 0.8;
 }
 
-.container {
+.form_continer {
     padding: 16px;
+}
+p{
+	color: var(--fuck);
 }
 /*#tempButton a{
 	font-family: 'Open Sans', sans-serif;
@@ -52,9 +58,6 @@ button:hover {
 	border: 2px solid;
 	border-color: white;
 	border-radius: 20px;
-}
-p{
-	color: var(--fuck);
 }
 
 Give the user an affordance that each link is clickable.
