--- a/admin_side/css/login.css
+++ b/admin_side/css/login.css
@@ -1,8 +1,8 @@
 @import url("theme.css");
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--dark);   
-    color: var(--light); 
+    background-color: var(--secondary);   
+    color: var(--dark); 
 }
 
 input[type=password] {
@@ -15,7 +15,7 @@ input[type=password] {
 }
 
 button {
-  background-color: var(--primary-dark);
+  background-color: var(--dark);
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
