--- a/jucsemylib/www/css/signUp.css
+++ b/jucsemylib/www/css/signUp.css
@@ -23,7 +23,8 @@
 /* input fields */
 
 input[type=text],
-input[type=password] {
+input[type=password],
+input[type=email] {
     width: 90%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -34,7 +35,8 @@ input[type=password] {
 }
 
 input[type=text]:focus,
-input[type=password]:focus {
+input[type=password]:focus,
+input[type=email]:focus {
     background-color: #ddd;
     outline: none;
 }
